# cpp-project-templates

./: .gitignore  README.md
clang-formats/: GoodAllman.clang-format.yaml
cmake-project/: CMakeLists.txt
cmake-project-basic/: CMakeLists.txt  README.md
cmake-project-conan/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build32.ps1  build64.ps1  conan_init_x64.ps1  conan_init_x86.ps1  conan_inti_x64.ps1  conanfile.txt
cmake-project-conan-small/: CMakeLists.txt
cmake-project-conan-small/src/: CMakeLists.txt  main.cpp  main.h
cmake-project-conan/src/: CMakeLists.txt  main.cpp
cmake-project-conan/test/: main.cpp  main.h
cmake-project-conan2/: .gitignore  CMakeLists.txt  conanfile.txt  make.bat
cmake-project-conan2/conan/: windows-msvc-17-shared-debug-x64.ini  windows-msvc-17-shared-release-x64.ini  windows-msvc-17-shared-relwithdebinfo-x64.ini
cmake-project-conan2/src/: main.cpp
cmake-project-qt-dialog/: .editorconfig  CMakeLists.txt  README.md
cmake-project-qt-dialog/cmake/: CompilerFlags.cmake  Debug.cmake
cmake-project-qt-dialog/cmake/CMakeSettingsTemplates/: CMakeSettings-2017.json  CMakeSettings-2019.json  CMakeSettings-Ninja.json
cmake-project-qt-dialog/res/: windows_metafile.rc.in
cmake-project-qt-dialog/res/icon/: AppIcon-License.txt  AppIcon.icns
cmake-project-qt-dialog/src/: main_dialog.cpp  main_dialog.h
cmake-project-qt-dialog/test/: CMakeLists.txt
cmake-project-qt-ui/: .gitignore  CMakeLists.txt  README.md
cmake-project-qt-ui/cmake/: Architecture.cmake  QtCommon.cmake
cmake-project-qt-ui/src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
cmake-project-qt-ui/test/: CMakeLists.txt  unicode.cpp
cmake-settings/: CMakeSettings-2017.json  CMakeSettings-2019.json  CMakeSettings-2022.json  CMakeSettings-Ninja.json
cmake-vcpkg/: CMakeLists.txt  vcpkg.json
cmake-vcpkg-dynamic-link/: CMakeLists.txt  build.sh  install-dev.sh  vcpkg.json
cmake-vcpkg-dynamic-link/cmake/: FixBuildRpath.cmake  InitVCPKG.cmake  QtOptions.cmake
cmake-vcpkg-dynamic-link/resources/: app.rc.in  run_app.sh.in
cmake-vcpkg-dynamic-link/source/: main.cpp
cmake-vcpkg-monorepo/: CMakeLists.txt  vcpkg.json
cmake-vcpkg-monorepo/Apps/: CMakeLists.txt
cmake-vcpkg-monorepo/Apps/App1/: CMakeLists.txt
cmake-vcpkg-monorepo/Apps/App1/Resources/: App.rc.in
cmake-vcpkg-monorepo/Apps/App1/Source/: Main.cpp
cmake-vcpkg-monorepo/Apps/App2/: CMakeLists.txt
cmake-vcpkg-monorepo/Apps/App2/Source/: Main.cpp
cmake-vcpkg-monorepo/CMake/: SBOM.cmake
cmake-vcpkg-monorepo/Libs/: CMakeLists.txt
cmake-vcpkg-monorepo/Libs/Lib1/: CMakeLists.txt
cmake-vcpkg-monorepo/Libs/Lib1/Include/Lib1/: HelloWorld1.h
cmake-vcpkg-monorepo/Libs/Lib1/Source/: HelloWorld1.cpp
cmake-vcpkg-monorepo/Libs/Lib2/: CMakeLists.txt
cmake-vcpkg-monorepo/Libs/Lib2/Include/Lib2/: HelloWorld2.h
cmake-vcpkg-monorepo/Libs/Lib2/Source/: HelloWorld2.cpp
cmake-vcpkg-monorepo/Libs/Lib3/: CMakeLists.txt
cmake-vcpkg-monorepo/Libs/Lib3/Include/Lib3/: HelloWorld3.h
cmake-vcpkg-monorepo/Libs/Lib3/Source/: HelloWorld3.cpp
cmake-vcpkg-monorepo/Scripts/: build.bat  build.sh
cmake-vcpkg-qt/: CMakeLists.txt  vcpkg.json
cmake-vcpkg-qt-dynamic-link-01/: .gitignore  build.bat  vcpkg-configuration.json
cmake-vcpkg-qt-dynamic-link-01/cmake/: FixBuildRpath.cmake  qt.conf
cmake-vcpkg-qt-dynamic-link-01/cpack/: License.txt  Readme.txt
cmake-vcpkg-qt-dynamic-link-02/: CMakeLists.txt  README.md  install-zip.sh
cmake-vcpkg-qt-dynamic-link-02/cmake/: QtOptions.cmake  qt.conf
cmake-vcpkg-qt-dynamic-link-02/cpack/: CMakeLists.txt  Description.txt  Welcome.txt
cmake-vcpkg-qt/CMake/: QtOptions.cmake  qt.conf
cmake-vcpkg-qt/CPack/: CMakeLists.txt
cmake-vcpkg-qt/Resources/: App.rc.in
cmake-vcpkg-vulkan/: CMakeLists.txt
cmake-vcpkg-vulkan/CMake/: InitVCPKG.cmake
cmake-vcpkg-vulkan/Resources/: App.rc.in
premake-project/: premake5.lua
premake-project-conan/: premake5.lua
premake-project-conan-c/: premake5.lua
premake-project-conan-c/ProjectOne/: premake5.lua
premake-project-conan-multi/: conanfile.txt  premake5.lua
premake-project-conan-multi/ProjectOne/: Main.cpp  premake5.lua
premake-project-conan-multi2/: .gitignore  conan.ps1  conanfile.txt  premake5.lua
premake-project-conan-multi2/Modules/Utils/: Format.h  Logger.h
premake-project-conan-multi2/ProjectOne/: Main.cpp  premake5.lua
premake-project-conan/ProjectOne/: premake5.lua
premake-project-vcpkg/: .gitignore  gen_solution.sh  get_deps.bat  get_deps.sh  premake5.lua
premake-project-vcpkg/ProjectOne/: Main.cpp
premake-project/ProjectOne/: Main.cpp  premake5.lua
